# coinevo-storage-server

./: CMakeLists.txt  LICENSE  README.md  mock_coinevod.py
crypto/: CMakeLists.txt
crypto/include/: coinevod_key.h
crypto/src/: coinevod_key.cpp
httpserver/: CMakeLists.txt  common.h  http_connection.cpp  http_connection.h  main.cpp  serialization.cpp  serialization.h  service_node.cpp  service_node.h  swarm.cpp  swarm.h
pow/: CMakeLists.txt
storage/: CMakeLists.txt
unit_test/: CMakeLists.txt  serialization.cpp
utils/include/: utils.hpp
